[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["Maciej Marciniak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
cognite-sdk = "^7.63.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
cognite-toolkit = "0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
